--- a/frontend/projects/cabinet/src/index.html
+++ b/frontend/projects/cabinet/src/index.html
@@ -5,7 +5,7 @@
   <title>Cabinet</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="wish-list-icon.png">
 </head>
 <body>
 <app-root></app-root>
